--- a/src/stylus/config/mixins.styl
+++ b/src/stylus/config/mixins.styl
@@ -1,5 +1,5 @@
 // @mixin
-all_webfonts()
+all-webfonts()
   @font-face
     font-family 'Avenir Variable'
     font-weight 1 999
@@ -33,5 +33,5 @@ webfont(weight = 500)
 
 // @mixin
 // @param Number weight
-webfont_weight(weight)
+webfont-weight(weight)
   font-variation-settings 'wght' weight
