--- a/src/stylus/moon/app.styl
+++ b/src/stylus/moon/app.styl
@@ -4,5 +4,5 @@
   min-height 100vh // fallback
   min-height calc(var(--vh, 1vh) * 100)
 
-  @media Breakpoint.SMALL
+  @media breakpoint.small
     grid-template-rows 1fr auto 1fr
