--- a/src/stylus/moon/charts.styl
+++ b/src/stylus/moon/charts.styl
@@ -1,12 +1,12 @@
 .charts
   align-self center
-  animation scaleIn TRANSITION_INTRO ease
+  animation scaleIn transition-intro ease
   grid-area charts
   padding rem(8)
 
 .charts__frame
   margin 0 auto
-  max-width CHART_MAX_WIDTH
+  max-width chart-max-width
   padding 0 0 100%
   position relative
 
