--- a/src/stylus/moon/custom-properties.styl
+++ b/src/stylus/moon/custom-properties.styl
@@ -2,6 +2,6 @@
   --fineprint em(12)
   --footer-height rem(44)
 
-  @media Breakpoint.SMALL
+  @media breakpoint.small
     --fineprint em(14)
     --footer-height rem(60)
