--- a/src/stylus/moon/info.styl
+++ b/src/stylus/moon/info.styl
@@ -1,6 +1,6 @@
 .info
   align-self center
-  animation slideInUp TRANSITION_INTRO ease
+  animation slideInUp transition-intro ease
   font-size em(14)
   grid-area info
   padding rem(16) 0
