--- a/src/stylus/moon/no-js.styl
+++ b/src/stylus/moon/no-js.styl
@@ -3,7 +3,7 @@
   grid-template-columns 1fr
   grid-template-rows auto 1fr auto
 
-  @media Breakpoint.SMALL
+  @media breakpoint.small
     grid-template-rows 1fr 2fr 1fr
 
 [no-js] .content
