--- a/src/stylus/moon/photo.styl
+++ b/src/stylus/moon/photo.styl
@@ -16,15 +16,15 @@
 
 .photo__figure
   border-radius 50%
-  flex 0 0 PHOTO_WIDTH
+  flex 0 0 photo-width
   overflow hidden
-  padding 0 0 PHOTO_WIDTH
+  padding 0 0 photo-width
   position relative
   
 .photo__image
   opacity 0
   position absolute
-  transition opacity TRANSITION ease
+  transition opacity transition ease
 
 .photo__image[ready]
   opacity 1
