--- a/src/stylus/moon/content.styl
+++ b/src/stylus/moon/content.styl
@@ -3,10 +3,10 @@
   grid-row 2
   grid-template-areas 'charts charts charts'\
                       'prev info next'
-  grid-template-columns CONTROLS_SIZE 1fr CONTROLS_SIZE
+  grid-template-columns controls-size 1fr controls-size
   grid-template-rows 1fr auto
 
-  @media Breakpoint.SMALL
+  @media breakpoint.small
     grid-template-areas 'prev charts next'\
                         'info info info'
-    grid-template-columns minmax(CONTROLS_SIZE, 1fr) minmax(CHART_SIZE, CHART_MAX_WIDTH) minmax(CONTROLS_SIZE, 1fr)
+    grid-template-columns minmax(controls-size, 1fr) minmax(chart-size, chart-max-width) minmax(controls-size, 1fr)
