--- a/src/stylus/moon/location.styl
+++ b/src/stylus/moon/location.styl
@@ -6,12 +6,12 @@ user-location
 .location
 .location__form
 .location__input
-  height LOCATION_HEIGHT
+  height location-height
   width 100%
 
 .location
   margin 0 auto
-  max-width LOCATION_MAX_WIDTH
+  max-width location-max-width
   position relative
 
 .location__form
@@ -23,14 +23,14 @@ user-location
 .location__input
   align-items center
   background rgba(white, 0)
-  border-radius (LOCATION_HEIGHT / 2)
+  border-radius (location-height / 2)
   color white
   display inline-flex
   font-size 1em
   padding 0 rem(32)
   text-align center
   text-overflow ellipsis
-  transition background TRANSITION
+  transition background transition
 
   &:focus
     background rgba(white, .25)
@@ -44,7 +44,7 @@ user-location
     opacity 1
 
 [no-touch] .location__input
-  transition background TRANSITION, opacity TRANSITION
+  transition background transition, opacity transition
 
 // ------------------------------
 // All buttons and icons.
@@ -53,20 +53,20 @@ user-location
   background 0
   border-radius 50%
   display inline-flex
-  height BUTTON_SIZE
+  height button-size
   justify-content center
   overflow hidden
   padding 0
   position absolute
   top 0
-  transition background TRANSITION
-  width BUTTON_SIZE
+  transition background transition
+  width button-size
 
 .icon > path
-  transition fill TRANSITION
+  transition fill transition
 
 svg.icon
-  transition background TRANSITION
+  transition background transition
 
 // ------------------------------
 // Reset button and icon.
