all custom elements renamed/relocated to subfolders

--- a/src/stylus/config/constants.styl
+++ b/src/stylus/config/constants.styl
@@ -3,7 +3,7 @@
 // -----------------------------------------------------------------------------
 // Dimensions.
 
-// Values below are coordinated with 'Chart' enum in 'src/js/modules/Constants.js'
+// Values below are coordinated with 'Chart' enum in 'js/modules/Constants.js'
 chart = {
   margin: 44
   size: 320
