initial refactor of user_location with pug template

--- a/src/js/custom_elements/user_location/location.styl
+++ b/src/js/custom_elements/user_location/location.styl
@@ -107,11 +107,11 @@ svg.icon
   &:focus
     background rgba(white, .25)
 
-.icon--geolocation
+.icon--location
   width 24px
 
-.icon--geolocation > path
+.icon--location > path
   fill rgba(white, 0)
 
-.location__button--geolocation[enabled] .icon--geolocation > path:last-child
+.location__button--geolocation[enabled] .icon--location > path:last-child
   fill rgba(white, 1)
