--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -24,7 +24,7 @@ html(lang="en-GB")
       header.header
         h1.header__title
           a.header__link(href="/" title="Today")= shortTitle
-        user-location.location(default="New York, NY")
+        user-location(default="New York, NY")
       main.content
         noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
         div.charts
