--- a/src/stylus/footer.styl
+++ b/src/stylus/footer.styl
@@ -1,4 +1,4 @@
-.footer
+footer
   align-items center
   align-self center
   color rgba(white, .5)
@@ -9,18 +9,18 @@
   justify-content center
   padding 0 0 env(safe-area-inset-bottom)
 
-.footer__years
-  margin-right em(8)
+  span
+    margin-right em(8)
 
-.footer__link
-  link(rgba(white, .5), rgba(white, .5), white, white)
+  a
+    link(rgba(white, .5), rgba(white, .5), white, white)
 
-.footer__link:focus
-[no-touch] .footer__link:hover
-  transition color transition
+    &:focus
+    [no-touch] &:hover
+      transition color transition
 
-.footer__blurb--repo::before
-  content '·'
-  display inline-block
-  text-align center
-  width 1rem
+    &:not(:first-of-type)::before
+      content '·'
+      display inline-block
+      text-align center
+      width 1rem
