simplifies html and css for main element

--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -6,7 +6,7 @@
 @import 'animations'
 @import 'html'
 @import 'app'
-@import 'content'
+@import 'main'
 @import 'footer'
 @import 'header'
 @import 'no-js'
