--- a/src/stylus/app.styl
+++ b/src/stylus/app.styl
@@ -6,3 +6,11 @@
 
   @media breakpoint.small
     grid-template-rows 1fr auto 1fr
+
+[no-js] .app
+  display grid
+  grid-template-columns 1fr
+  grid-template-rows auto 1fr auto
+
+  @media breakpoint.small
+    grid-template-rows 1fr 2fr 1fr
