--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -1,23 +1,23 @@
-.header
+header
   align-self center
   animation slideInDown transition-intro ease
   grid-row 1
   padding rem(8) rem(16)
 
-.header__title
-  font-size 1rem
-  margin 0
-  text-align center
+  h1
+    font-size 1rem
+    margin 0
+    text-align center
 
-.header__link
-  link(white, white, rgba(white, .7), rgba(white, .7))
-  display inline-block
-  padding rem(8)
-  transition transform transition
-  white-space nowrap
+  a
+    link(white, white, rgba(white, .7), rgba(white, .7))
+    display inline-block
+    padding rem(8)
+    transition transform transition
+    white-space nowrap
 
-.header__link:active
-  transform scale(.8)
+    &:active
+      transform scale(.8)
 
-[no-touch] .header__link
-  transition color transition, transform transition
+    [no-touch] &
+      transition color transition, transform transition
