--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -11,7 +11,9 @@
 @import 'header'
 @import 'progress-bar'
 
+@import '../js/custom_elements/chart_axes/chart_axes'
 @import '../js/custom_elements/donut_chart/charts'
+@import '../js/custom_elements/donut_chart/donut_chart'
 @import '../js/custom_elements/highlighter/today'
 @import '../js/custom_elements/info/info'
 @import '../js/custom_elements/photo/photo'
