--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -39,10 +39,10 @@ html(lang="en-GB")
             donut-chart(name="sun" color=sunColor)
             donut-chart(name="moon" color=moonColor)
             moon-photo.photo
-        moon-info.info
+        moon-info
         prev-next(direction="prev")
         prev-next(direction="next")
-        app-today(selector="header h1, .info__phase, .info__percent")
+        app-today(selector="header h1, #phase, #percent")
       footer
         span © 2020–#{currentYear}
         a(
