simplifies/refactors chart-axes and donut-chart styles

--- a/src/js/custom_elements/chart_axes/chart_axes.styl
+++ b/src/js/custom_elements/chart_axes/chart_axes.styl
@@ -4,12 +4,8 @@ chart-axes
   width 100%
   z-index 3
 
-  .axis
+  [id=axes] line
     stroke black
 
-  .tick
+  [id=ticks] line
     stroke rgba(white, .7)
-
-  // SVG chart 'rise' and 'set' time labels. Sizes scale with SVG, so value varies.
-  .chart__label
-    font-size em(13)
