--- a/src/js/custom_elements/donut_chart/donut_chart.styl
+++ b/src/js/custom_elements/donut_chart/donut_chart.styl
@@ -12,3 +12,7 @@ donut-chart
   // Blend moon arc with sun arc where they overlap.
   &[name=moon] circle
     opacity .5
+
+  // SVG <text> elements.
+  text
+    font-size em(13)
