--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -2,22 +2,18 @@ moon-charts
   align-self center
   animation scaleIn transition-intro ease
   grid-area charts
-  padding rem(8)
+  margin rem(8)
+  max-width chart-max-width
+  padding 0 0 100%
+  position relative
 
   [no-js] &
     display none
 
-  & > div
-    margin 0 auto
-    max-width chart-max-width
-    padding 0 0 100%
-    position relative
-
-  .polar-coordinates
+  svg
     height 100%
     position absolute
     width 100%
-    z-index 3
 
   [id=axes] line
     stroke black
