syntax updates for JS in templates (no-op)

--- a/src/js/custom_elements/moon_charts/moon_charts.pug
+++ b/src/js/custom_elements/moon_charts/moon_charts.pug
@@ -1,5 +1,6 @@
-- const moonColor = '#fff'
-- const sunColor = '#f8c537'
+-
+  const moonColor = '#fff';
+  const sunColor = '#f8c537';
 
 //- Mixins.
 mixin line(coordinates)
