--- a/src/js/custom_elements/photo/photo.pug
+++ b/src/js/custom_elements/photo/photo.pug
@@ -1,5 +1,6 @@
-- const IMAGE_PATH_1X = '/img/moon-phases-26-240.min.jpg';
-- const IMAGE_PATH_2X = '/img/moon-phases-26-480.min.jpg';
+-
+  const IMAGE_PATH_1X = '/img/moon-phases-26-240.min.jpg';
+  const IMAGE_PATH_2X = '/img/moon-phases-26-480.min.jpg';
 
 div
   figure
