--- a/src/js/custom_elements/prev_next/prev_next.pug
+++ b/src/js/custom_elements/prev_next/prev_next.pug
@@ -1,6 +1,7 @@
-- const ARROW_LEFT = 'm21.08768,26.09236l-10.17537,-10.1165l10.12708,-10.06822';
-- const ARROW_RIGHT = 'm10.91231,5.90764l10.17537,10.1165l-10.12708,10.06822';
-- const path = direction === 'prev' ? ARROW_LEFT : ARROW_RIGHT;
+-
+  const ARROW_LEFT = 'm21.08768,26.09236l-10.17537,-10.1165l10.12708,-10.06822';
+  const ARROW_RIGHT = 'm10.91231,5.90764l10.17537,10.1165l-10.12708,10.06822';
+  const path = direction === 'prev' ? ARROW_LEFT : ARROW_RIGHT;
 
 a
   svg(
