--- a/src/stylus/header.styl
+++ b/src/stylus/header.styl
@@ -1,7 +1,7 @@
 header
   align-self center
   animation slideInDown transition-intro ease
-  grid-row 1
+  grid-area header
   padding rem(8) rem(16)
 
   h1
