first round of updates with flatter html and simpler css grid

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -23,16 +23,17 @@ html(lang="en-GB")
       crossorigin="crossorigin"
     )
   body(no-js no-touch)
-    div.progress-bar
-    moon-app.app
-      header
-        h1
-          a(href="/" title="Today")= shortTitle
-        user-location(default="New York, NY")
-      main
-        noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
-        moon-charts
-        moon-info
-        prev-next(direction="prev")
-        prev-next(direction="next")
-        app-today(selector="header h1, #phase, #percent")
+    header
+      h1
+        a(href="/" title="Today")= shortTitle
+    main
+      noscript Please <a href="https://www.enable-javascript.com/" title="How to enable JavaScript in your browser">enable JavaScript</a> to view this app.
+      moon-charts
+      moon-info
+    nav
+      user-location(default="New York, NY")
+      prev-next(direction="prev")
+      prev-next(direction="next")
+    moon-app
+    app-today(selector="header h1, #phase, #percent")
+    .progress-bar
