--- a/src/js/custom_elements/info/info.styl
+++ b/src/js/custom_elements/info/info.styl
@@ -1,9 +1,10 @@
 moon-info
   align-self center
   animation slideInUp transition-intro ease
+  display block
   font-size em(14)
   grid-area info
-  padding rem(16) 0
+  margin rem(16)
   text-align center
   white-space nowrap
 
