--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -1,7 +1,7 @@
 moon-charts
   align-self center
   animation scaleIn transition-intro ease
-  grid-area charts
+  display block
   max-width chart-max-width
   padding 0 0 100%
   position relative
