--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -5,9 +5,10 @@
 @import 'vars'
 @import 'animations'
 @import 'html'
-@import 'app'
-@import 'main'
+@import 'body'
 @import 'header'
+@import 'main'
+@import 'nav'
 @import 'progress-bar'
 
 @import '../js/custom_elements/donut_chart/donut_chart'
