--- a/src/js/custom_elements/user_location/user_location.styl
+++ b/src/js/custom_elements/user_location/user_location.styl
@@ -1,7 +1,7 @@
 user-location
   display block
   grid-area user-location
-  margin 0 auto
+  margin auto
   max-width location-max-width
   position relative
 
