--- a/src/stylus/index.styl
+++ b/src/stylus/index.styl
@@ -8,9 +8,9 @@
 @import 'body'
 @import 'header'
 @import 'main'
-@import 'nav'
 @import 'progress-bar'
 
+@import '../js/custom_elements/app/app'
 @import '../js/custom_elements/donut_chart/donut_chart'
 @import '../js/custom_elements/highlighter/today'
 @import '../js/custom_elements/info/info'
