--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -7,6 +7,7 @@ body
   grid-template-columns controls-size 1fr controls-size
   grid-template-rows 1fr auto 1fr
   min-height calc(var(--vh, 1vh) * 100)
+  padding-bottom env(safe-area-inset-bottom)
 
   @media breakpoint.small
     grid-template-areas:
