3x4 grid with app inside main

--- a/src/js/custom_elements/info/info.styl
+++ b/src/js/custom_elements/info/info.styl
@@ -3,6 +3,7 @@ moon-info
   animation slideInUp transition-intro ease
   display block
   font-size em(14)
+  grid-area info
   margin rem(16)
   text-align center
   white-space nowrap
