--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -2,6 +2,7 @@ moon-charts
   align-self center
   animation scaleIn transition-intro ease
   display block
+  grid-area charts
   max-width chart-max-width
   padding 0 0 100%
   position relative
