--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -3,9 +3,10 @@ body
   grid-template-areas:
     'header header header'\
     'charts charts charts'\
+    '. info .'\
     'prev user-location next'
   grid-template-columns controls-size 1fr controls-size
-  grid-template-rows 1fr auto 1fr
+  grid-template-rows 1fr auto auto 1fr
   min-height calc(var(--vh, 1vh) * 100)
   padding-bottom env(safe-area-inset-bottom)
 
@@ -13,6 +14,7 @@ body
     grid-template-areas:
       'header header header'\
       'prev charts next'\
+      '. info .'\
       '. user-location .'
     grid-template-columns minmax(controls-size, 1fr) minmax(chart-size, chart-max-width) minmax(controls-size, 1fr)
 
