--- a/src/js/custom_elements/date_display/date_display.styl
+++ b/src/js/custom_elements/date_display/date_display.styl
@@ -1,18 +1,13 @@
-header
+moon-date
   align-self center
   animation slideInDown transition-intro ease
-  grid-area header
-  padding rem(8) rem(16)
-
-  h1
-    font-size 1rem
-    margin 0
-    text-align center
+  display block
+  grid-area date
+  text-align center
 
   a
     link(white, white, rgba(white, .7), rgba(white, .7))
-    display inline-block
-    padding rem(8)
+    padding rem(8) rem(16)
     transition transform transition
     white-space nowrap
 
@@ -21,3 +16,6 @@ header
 
     [no-touch] &
       transition color transition, transform transition
+
+.today
+  webfont-weight(600)
