--- a/src/js/custom_elements/user_location/user_location.styl
+++ b/src/js/custom_elements/user_location/user_location.styl
@@ -1,6 +1,6 @@
 user-location
   display block
-  grid-area user-location
+  grid-area location
   margin auto
   max-width location-max-width
   position relative
