--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -1,10 +1,10 @@
 body
   display grid
   grid-template-areas:
-    'header header header'\
-    'charts charts charts'\
     '. info .'\
-    'prev user-location next'
+    'charts charts charts'\
+    '. location .'\
+    'prev date next'
   grid-template-columns controls-size 1fr controls-size
   grid-template-rows 1fr auto auto 1fr
   min-height calc(var(--vh, 1vh) * 100)
@@ -12,10 +12,10 @@ body
 
   @media breakpoint.small
     grid-template-areas:
-      'header header header'\
-      'prev charts next'\
       '. info .'\
-      '. user-location .'
+      'prev charts next'\
+      '. location .'\
+      '. date .'
     grid-template-columns minmax(controls-size, 1fr) minmax(chart-size, chart-max-width) minmax(controls-size, 1fr)
 
 // Disable UI while loading data.
