grid updates for new DOM

--- a/src/js/custom_elements/info/info.styl
+++ b/src/js/custom_elements/info/info.styl
@@ -1,6 +1,6 @@
 moon-info
-  align-self center
-  animation slideInUp transition-intro ease
+  align-self end
+  animation slideInDown transition-intro ease
   display block
   font-size em(14)
   grid-area info
