--- a/src/js/custom_elements/user_location/user_location.styl
+++ b/src/js/custom_elements/user_location/user_location.styl
@@ -1,8 +1,9 @@
 user-location
+  animation slideInDown transition-intro ease
   display block
   grid-area location
-  margin auto
   max-width location-max-width
+  place-self center
   position relative
 
   &
