--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -6,7 +6,7 @@ body
     '. location .'\
     'prev date next'
   grid-template-columns controls-size 1fr controls-size
-  grid-template-rows 1fr auto auto 1fr
+  grid-template-rows 2fr auto 1fr 1fr
   min-height calc(var(--vh, 1vh) * 100)
   padding-bottom env(safe-area-inset-bottom)
 
