simplifies date_display to only update itself

--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -26,7 +26,7 @@ html(lang="en-GB")
     main
       moon-info
       moon-charts
-      moon-date(selector="#phase, #percent")
+      moon-date
       user-location(default="New York, NY")
       prev-next(direction="prev")
       prev-next(direction="next")
