--- a/src/js/custom_elements/date_display/date_display.styl
+++ b/src/js/custom_elements/date_display/date_display.styl
@@ -1,9 +1,8 @@
 moon-date
-  align-self center
-  animation slideInDown transition-intro ease
+  animation slideInUp transition-intro ease
   display block
   grid-area date
-  text-align center
+  place-self center
 
   a
     link(white, white, rgba(white, .7), rgba(white, .7))
@@ -17,5 +16,5 @@ moon-date
     [no-touch] &
       transition color transition, transform transition
 
-.today
-  webfont-weight(600)
+  .today
+    webfont-weight(600)
