--- a/src/html/index.pug
+++ b/src/html/index.pug
@@ -1,6 +1,5 @@
-- const title = "Moonrise, Moonset, Moon Phase"
+- const title = "Moon"
 - const description = "Geolocation-based moon phase, moonrise, and moonset"
-- const shortTitle = "Moon"
 - const currentYear = new Date().getFullYear()
 
 doctype html
@@ -9,7 +8,7 @@ html(lang="en-GB")
     title= title
     meta(charset="utf-8")
     meta(name="apple-mobile-web-app-capable" content="yes")
-    meta(name="apple-mobile-web-app-title" content=shortTitle)
+    meta(name="apple-mobile-web-app-title" content=title)
     meta(name="description" content=description)
     meta(name="theme-color" content="#000")
     meta(name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover")
