updates/fixes for breakpoint layouts

--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -1,11 +1,12 @@
 moon-charts
-  align-self center
   animation scaleIn transition-intro ease
   display block
   grid-area charts
-  max-width chart-max-width
+  margin auto
+  max-width chart-max-size
   padding 0 0 100%
   position relative
+  width 100%
 
   [no-js] &
     display none
