--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -5,8 +5,8 @@ body
     'charts charts charts'\
     'charts charts charts'\
     'charts charts charts'\
-    '. location .'\
-    'prev date next'
+    'prev date next'\
+    '. location .'
   grid-template-columns controls-size minmax(auto, chart-max-size) controls-size
   grid-template-rows 2fr controls-size auto controls-size 1fr 1fr
   min-height calc(var(--vh, 1vh) * 100)
@@ -18,8 +18,8 @@ body
       '. . .'\
       'prev charts next'\
       '. . .'\
-      '. location .'\
-      '. date .'
+      '. date .'\
+      '. location .'
     grid-template-columns minmax(controls-size, 1fr) minmax(chart-size, chart-max-size) minmax(controls-size, 1fr)
 
 // Disable UI while loading data.
