no scrolling since app always fits in the viewport

--- a/src/stylus/body.styl
+++ b/src/stylus/body.styl
@@ -10,6 +10,7 @@ body
   grid-template-columns controls-size minmax(auto, chart-max-size) controls-size
   grid-template-rows 2fr controls-size auto controls-size 1fr 1fr
   min-height calc(var(--vh, 1vh) * 100)
+  overflow hidden
   padding-bottom env(safe-area-inset-bottom)
 
   @media breakpoint.small
