renames/refactors chart ticks constants (no-op)

--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -16,8 +16,9 @@ moon-charts
     position absolute
     width 100%
 
-  [id=axes] line
+  [id=sweep-ticks] line
     stroke black
 
-  [id=ticks] line
+  [id=major-ticks] line
+  [id=minor-ticks] line
     stroke rgba(white, .7)
