minor ticks wired up and working, ready for tweaking

--- a/src/js/custom_elements/moon_charts/moon_charts.pug
+++ b/src/js/custom_elements/moon_charts/moon_charts.pug
@@ -13,5 +13,5 @@ svg(
           y1=line.y1
           x2=line.x2
           y2=line.y2
-          transform=(line.rotate ? line.rotate : false)
+          transform=(line.transform ? line.transform : false)
         )
