--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -20,5 +20,7 @@ moon-charts
     stroke black
 
   [id=major-ticks] line
-  [id=minor-ticks] line
     stroke rgba(white, .7)
+
+  [id=minor-ticks] line
+    stroke rgba(white, .3)
