removes/replaces mixins, disables clicks on today link when current

--- a/src/js/custom_elements/date_display/date_display.styl
+++ b/src/js/custom_elements/date_display/date_display.styl
@@ -17,4 +17,5 @@ moon-date
       transition color transition, transform transition
 
   .today
-    webfont-weight(600)
+    font-variation-settings 'wght' 600
+    pointer-events none
