more refactoring/simplifying for chart ticks

--- a/src/js/custom_elements/moon_charts/moon_charts.styl
+++ b/src/js/custom_elements/moon_charts/moon_charts.styl
@@ -19,8 +19,8 @@ moon-charts
   [id=sweep-ticks] line
     stroke black
 
+  [id=minor-ticks] line
+    stroke rgba(black, .1)
+
   [id=major-ticks] line
     stroke rgba(white, .7)
-
-  [id=minor-ticks] line
-    stroke rgba(white, .3)
