arrow size and state tweaks

--- a/src/js/custom_elements/prev_next/prev_next.styl
+++ b/src/js/custom_elements/prev_next/prev_next.styl
@@ -27,7 +27,7 @@ prev-next
       stroke-width 1
       transition stroke transition
 
-    &:active path
+    &:focus path
     [no-touch] &:hover path
       stroke rgba(white, .7)
 
